copy html, compile ts,  minify js done

--- a/package.json
+++ b/package.json
@@ -16,18 +16,22 @@
     "url": "https://github.com/ezzabuzaid/Memory-game-javaScript/issues"
   },
   "homepage": "https://github.com/ezzabuzaid/Memory-game-javaScript#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-copy": "^4.0.1",
     "browserify": "^16.2.3",
-    "gulp-htmlmin": "^5.0.1",
+    "clean-css": "^4.2.1",
+    "cssnano": "^4.1.7",
     "del": "^3.0.0",
     "gulp-clean": "^0.4.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-minify": "^3.1.0",
     "gulp-minify-inline": "^1.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^5.0.0-alpha.3",
     "gulp-uglify": "^3.0.1",
+    "gulp-uglify-es": "^1.0.4",
     "gulp-watch": "^5.0.1",
     "tsify": "^4.0.0",
     "typescript": "^3.1.6",
